[package]
name = "tiny_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
url = "2.4"
regex = "1.10"
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
robotstxt = "0.3"
rand = "0.8"
once_cell = "1.18"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
